scenario/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-b
spec:
  strategy:
    canary:
      canaryService: service-b-canary
      stableService: service-b-stable
      trafficRouting:
        istio:
          virtualServices:
          - name: service-b
            routes:
            - primary
          - name: service-b-internal
            routes:
            - primary-http
            #- primary-grpc
      steps:
        - setWeight: 10
        - pause: {}
        - setWeight: 40
        - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
        istio-injection: enabled
    spec:
      containers:
      - name: service-b
        image: service-b:green
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 50m
        livenessProbe:
          failureThreshold: 10
          grpc:
              port: 8201
              service: ""
          initialDelaySeconds: 0
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          grpc:
              port: 8201
              service: ""
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
