scenario/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  - port: 8021
    targetPort: grpc
    protocol: TCP
    name: grpc
  - port: 8000
    targetPort: bcomms
    protocol: TCP
    name: bcomms
  selector:
    app: service-b
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  name: service-b-canary
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  - port: 8021
    targetPort: grpc
    protocol: TCP
    name: grpc
  - port: 8000
    targetPort: bcomms
    protocol: TCP
    name: bcomms
  selector:
    app: service-b
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  name: service-b-stable
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  - port: 8021
    targetPort: grpc
    protocol: TCP
    name: grpc
  - port: 8000
    targetPort: bcomms
    protocol: TCP
    name: bcomms
  selector:
    app: service-b
